updated the style to fix the icon alignment issue in the leftnav

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -71,6 +71,9 @@ body {
         display: table-cell;
       }
     }
+    .heading {
+      text-transform: initial;
+    }
     .description {
       font-style: italic;
       margin: 0 0.5em;
@@ -585,5 +588,9 @@ body {
     .badge {
       float: left;
     }
+  }
+  /***reset the margin for the panel***/
+  .app-livelist.panel {
+    margin-bottom: 0;
   }
 }
