--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -91,8 +91,6 @@ html, body {
 .app-icon {
   display: inline-block;
   position: relative;
-  width: 1em;
-  height: 1em;
 }
 
 /*error message for missing partial*/
@@ -977,9 +975,6 @@ body.modal-open {
   .app-list-item {
     position: relative;
     list-style: none;
-    &.list-group-item {
-      margin-bottom: 0;
-    }
     .app-list-item-value {
      word-break: break-all;
     }
